[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[profile.bench]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true

[profile.flame]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true
debug = true

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
fxhash = "0.2.1"
nohash = "0.2.0"
