[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[profile.max]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true

[profile.bench]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true

[profile.flame]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true
debug = true

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
fxhash = "0.2.1"
memchr = "2.7.4"
tinyvec = "1.8.0"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "solutions"
harness = false
